docs: Update projects description

--- a/mlis/problems/vote_prediction.ipynb
+++ b/mlis/problems/vote_prediction.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "find_me.ipynb",
+      "name": "vote_prediction.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": []
@@ -22,12 +22,36 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Find Me\n",
+        "# Vote prediction\n",
         "\n",
-        "Solve NN generalization problem using PyTorch and grid search.\n",
+        "Your friend runs an evil government and he wants to influence elections in a foreign country. His evil spy network collected data about voters in a foreign country:\n",
         "\n",
-        "There are random function of 8 inputs and X random inputs added.\n",
-        "We split data in two parts for training and testing"
+        "- 1 if a voter older then 35 years, 0 otherwise\n",
+        "- 1 if a voter male, 0 otherwise\n",
+        "- 1 if a voter watched PythonNN in last month, 0 otherwise\n",
+        "- 1 if a voter watched Rabbit News in last month, 0 otherwise\n",
+        "- 1 if a voter lives in a big city, 0 otherwise\n",
+        "- 1 if a voter voted last time, 0 otherwise\n",
+        "- 1 if a voter likes ice cream, 0 otherwise\n",
+        "- 1 if a voter has hair, 0 otherwise\n",
+        "\n",
+        "An evil plan of your friend is following:\n",
+        "\n",
+        "- Based on 8 features predict how a person will vote\n",
+        "- Model if watching Rabbit News influences voters to vote for needed option\n",
+        "- Go to national parks and feed the rabbits\n",
+        "- A population of rabbits will grow, more people will see them in park\n",
+        "- People who will see rabbits in a park will decide to watch Rabbit News\n",
+        "\n",
+        "Your friend just notified you that they were able to collect information about voters, but they were not able to get information on how people voted before because that country employs secret vote system.\n",
+        "\n",
+        "They have information on how people voted in aggregate but not on voter level.\n",
+        "So, now it is your work to help your evil government and earn a hero status.\n",
+        "You are given data from previous elections. 8*(number of voters) features and binary result:\n",
+        "\n",
+        "- 1 if more then half voters voted in favor, 0 otherwise\n",
+        "\n",
+        "Your task is based on this information to predict how people will vote on next election."
       ]
     },
     {
@@ -46,31 +70,17 @@
       "metadata": {
         "id": "zY6IVIQ9H3vP",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "271e5b96-25e0-4814-c9df-aadbfb3b87d6"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "!rm gridsearch.py solutionmanager.py speedtest.py\n",
-        "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-find-me/master/mlis/utils/gridsearch.py -q\n",
-        "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-find-me/master/mlis/utils/solutionmanager.py -q\n",
-        "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-find-me/master/mlis/utils/speedtest.py -q"
+        "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-vote-prediction/master/mlis/utils/gridsearch.py -q\n",
+        "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-vote-prediction/master/mlis/utils/solutionmanager.py -q\n",
+        "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-vote-prediction/master/mlis/utils/speedtest.py -q"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "rm: cannot remove 'gridsearch.py': No such file or directory\n",
-            "rm: cannot remove 'solutionmanager.py': No such file or directory\n",
-            "rm: cannot remove 'speedtest.py': No such file or directory\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -86,39 +96,14 @@
       "metadata": {
         "id": "h0u8cfq_Kb7q",
         "colab_type": "code",
-        "outputId": "f11b8bda-7a47-4b52-dc00-9fc534cbe415",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 255
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "!pip3 install tensorboard tensorboardX"
+        "!pip3 install tensorboardX"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: tensorboard in /usr/local/lib/python3.6/dist-packages (1.12.2)\n",
-            "Collecting tensorboardX\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5c/76/89dd44458eb976347e5a6e75eb79fecf8facd46c1ce259bad54e0044ea35/tensorboardX-1.6-py2.py3-none-any.whl (129kB)\n",
-            "\u001b[K    100% |████████████████████████████████| 133kB 8.1MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard) (1.14.6)\n",
-            "Requirement already satisfied: werkzeug>=0.11.10 in /usr/local/lib/python3.6/dist-packages (from tensorboard) (0.14.1)\n",
-            "Requirement already satisfied: grpcio>=1.6.3 in /usr/local/lib/python3.6/dist-packages (from tensorboard) (1.15.0)\n",
-            "Requirement already satisfied: wheel>=0.26; python_version >= \"3\" in /usr/local/lib/python3.6/dist-packages (from tensorboard) (0.33.0)\n",
-            "Requirement already satisfied: protobuf>=3.4.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard) (3.6.1)\n",
-            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard) (3.0.1)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard) (1.11.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.4.0->tensorboard) (40.8.0)\n",
-            "Installing collected packages: tensorboardX\n",
-            "Successfully installed tensorboardX-1.6\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -155,32 +140,15 @@
       "metadata": {
         "id": "FHGP0tazJeCP",
         "colab_type": "code",
-        "outputId": "efc7b522-1fc7-47a1-a598-e3c8eb5353cf",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "device"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "device(type='cuda')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -364,11 +332,7 @@
       "metadata": {
         "id": "R4LjeldMJOKK",
         "colab_type": "code",
-        "outputId": "2821333c-2b28-4aa7-fc8d-54a2d0b44e68",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 816
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -382,48 +346,39 @@
         "    def __init__(self):\n",
         "        self.number_of_cases = 10\n",
         "\n",
-        "    def create_data(self, data_size, input_size, random_input_size, seed):\n",
+        "    def get_index(self, tensor_index):\n",
+        "        index = 0\n",
+        "        for i in range(tensor_index.size(0)):\n",
+        "            index = 2*index + tensor_index[i].item()\n",
+        "        return index\n",
+        "\n",
+        "    def calc_value(self, input_data, function_table, input_size, input_count_size):\n",
+        "        count = 0\n",
+        "        for i in range(input_count_size):\n",
+        "            count += function_table[self.get_index(input_data[i*input_size: (i+1)*input_size])].item()\n",
+        "        if count > input_count_size/2:\n",
+        "            return 1\n",
+        "        else:\n",
+        "            return 0\n",
+        "\n",
+        "    def create_data(self, data_size, input_size, input_count_size, seed):\n",
         "        torch.manual_seed(seed)\n",
         "        function_size = 1 << input_size\n",
-        "        function_input = torch.ByteTensor(function_size, input_size)\n",
-        "        for i in range(function_input.size(0)):\n",
-        "            fun_ind = i\n",
-        "            for j in range(function_input.size(1)):\n",
-        "                input_bit = fun_ind&1\n",
-        "                fun_ind = fun_ind >> 1\n",
-        "                function_input[i][j] = input_bit\n",
-        "        function_output = torch.ByteTensor(function_size).random_(0, 2)\n",
-        "\n",
-        "        if data_size % function_size != 0:\n",
-        "            raise \"Data gen error\"\n",
-        "\n",
-        "        data_input = torch.ByteTensor(data_size, input_size).view(-1, function_size, input_size).to(device)\n",
-        "        target = torch.ByteTensor(data_size).view(-1, function_size).to(device)\n",
-        "        for i in range(data_input.size(0)):\n",
-        "            data_input[i] = function_input\n",
-        "            target[i] = function_output\n",
-        "        data_input = data_input.view(data_size, input_size)\n",
-        "        target = target.view(data_size)\n",
-        "        if random_input_size > 0:\n",
-        "            data_random = torch.ByteTensor(data_size, random_input_size).random_(0, 2).to(device)\n",
-        "            \n",
-        "            data = torch.cat([data_input, data_random], dim=1)\n",
-        "        else:\n",
-        "            data = data_input\n",
-        "        perm = torch.randperm(data.size(1))\n",
-        "        data = data[:,perm]\n",
-        "        perm = torch.randperm(data.size(0))\n",
-        "        data = data[perm]\n",
-        "        target = target[perm]\n",
+        "        function_table = torch.ByteTensor(function_size).random_(0, 2)\n",
+        "        total_input_size = input_size*input_count_size\n",
+        "        data = torch.ByteTensor(data_size, total_input_size).random_(0, 2)\n",
+        "        target = torch.ByteTensor(data_size)\n",
+        "        for i in range(data_size):\n",
+        "            target[i] = self.calc_value(data[i], function_table, input_size, input_count_size)\n",
         "        return (data.float(), target.view(-1, 1).float())\n",
         "\n",
         "    def create_case_data(self, case):\n",
-        "        data_size = 256*32\n",
         "        input_size = 8\n",
-        "        random_input_size = min(32, (case-1)*4)\n",
+        "        data_size = (1<<input_size)*32\n",
+        "        input_count_size = case\n",
         "\n",
-        "        data, target = self.create_data(2*data_size, input_size, random_input_size, case)\n",
-        "        return sm.CaseData(case, Limits(), (data[:data_size], target[:data_size]), (data[data_size:], target[data_size:])).set_description(\"{} inputs and {} random inputs\".format(input_size, random_input_size))\n",
+        "        data, target = self.create_data(2*data_size, input_size, input_count_size, case)\n",
+        "        return sm.CaseData(case, Limits(), (data[:data_size], target[:data_size]), (data[data_size:], target[data_size:])).set_description(\"{} inputs per voter and {} voters\".format(input_size, input_count_size))\n",
         "\n",
         "class Config:\n",
         "    def __init__(self):\n",
@@ -433,67 +388,34 @@
         "        return DataProvider()\n",
         "\n",
         "    def get_solution(self):\n",
-        "        return Solution()\n",
-        "\n",
-        "# If you want to run specific case, put number here\n",
-        "sm.SolutionManager(Config()).run(case_number=-1)\n"
+        "        return Solution()"
       ],
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Local CPU time mult = 0.65\n",
-            "Case #1[8 inputs and 0 random inputs] Step=76 Size=7023/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0007047344697639346\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0007638151291757822\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #2[8 inputs and 4 random inputs] Step=82 Size=7203/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.000707161845639348\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.000793427461758256\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #3[8 inputs and 8 random inputs] Step=80 Size=7383/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0006573689170181751\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0006920306477695704\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #4[8 inputs and 12 random inputs] Step=74 Size=7563/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0008905095746740699\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.000941755308303982\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #5[8 inputs and 16 random inputs] Step=74 Size=7743/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0011314005823805928\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0013351300731301308\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #6[8 inputs and 20 random inputs] Step=74 Size=7923/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0009636231698095798\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.001142075750976801\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #7[8 inputs and 24 random inputs] Step=80 Size=8103/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0008814652101136744\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.001154498546384275\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #8[8 inputs and 28 random inputs] Step=74 Size=8283/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.003431461751461029\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0042311325669288635\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #9[8 inputs and 32 random inputs] Step=76 Size=8463/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0013370499946177006\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0017925417050719261\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Case #10[8 inputs and 32 random inputs] Step=74 Size=8463/1000000 Time=1.9/2.0\n",
-            "Train correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0021728998981416225\n",
-            "Test  correct/total=8192/8192 Ratio/limit=1.00/1.00 Loss=0.0026432571467012167\n",
-            "\u001b[92m[OK]\u001b[0m\n",
-            "Test rate (max/mean/min/limit) = 1.000/1.000/1.000/1.000\n",
-            "Average steps = 76.400\n",
-            "Average time = 1.914/2.000\n",
-            "Average size = 7815.000/1000000.000\n",
-            "\u001b[92m[ACCEPTED]\u001b[0m you can submit now your score\n",
-            "In order to submit just do a Facebook comment with your score\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "u9TKWWOXOEti",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Run training loop"
       ]
+    },
+    {
+      "metadata": {
+        "id": "9GjGcBTIOCxU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# If you want to run specific case, put number here\n",
+        "sm.SolutionManager(Config()).run(case_number=-1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
