feat: Make model CUDA compatible

--- a/mlis/problems/vote_prediction.ipynb
+++ b/mlis/problems/vote_prediction.ipynb
@@ -74,7 +74,6 @@
       },
       "cell_type": "code",
       "source": [
-        "!rm gridsearch.py solutionmanager.py speedtest.py\n",
         "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-vote-prediction/master/mlis/utils/gridsearch.py -q\n",
         "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-vote-prediction/master/mlis/utils/solutionmanager.py -q\n",
         "!wget https://raw.githubusercontent.com/VVKot/mlinseconds-vote-prediction/master/mlis/utils/speedtest.py -q"
@@ -325,7 +324,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Evaluate the model"
+        "Create data generator"
       ]
     },
     {
@@ -370,7 +369,7 @@
         "        target = torch.ByteTensor(data_size)\n",
         "        for i in range(data_size):\n",
         "            target[i] = self.calc_value(data[i], function_table, input_size, input_count_size)\n",
-        "        return (data.float(), target.view(-1, 1).float())\n",
+        "        return (data.float().to(device), target.view(-1, 1).float().to(device))\n",
         "\n",
         "    def create_case_data(self, case):\n",
         "        input_size = 8\n",
