feat: Setup training using Adam

--- a/mlis/problems/vote_prediction.ipynb
+++ b/mlis/problems/vote_prediction.ipynb
@@ -174,10 +174,10 @@
         "        self.output_size = output_size\n",
         "        self.solution = solution\n",
         "        self.learning_rate = solution.learning_rate\n",
-        "        self.momentum = solution.momentum\n",
+        "#         self.momentum = solution.momentum\n",
         "        self.hidden_size = solution.hidden_size\n",
         "        self.activation_hidden = solution.activation_hidden\n",
-        "        self.activation_output = solution.activation_output\n",
+        "        self.activation_output = nn.Sigmoid()\n",
         "        self.do_batch_norm = solution.do_batch_norm\n",
         "        self.layers_number = solution.layers_number\n",
         "        if self.solution.grid_search.enabled:\n",
@@ -191,8 +191,10 @@
         "            x = self.linears[i](x)\n",
         "            if self.solution.do_batch_norm:\n",
         "                x = self.batch_norms[i](x)\n",
-        "            act_function = self.solution.activation_output if i == len(self.linears)-1 else self.solution.activation_hidden\n",
-        "            x = self.solution.activations[act_function](x)\n",
+        "            if i == len(self.linears)-1:\n",
+        "                x = self.activation_output(x)\n",
+        "            else:            \n",
+        "                x = self.solution.activations[self.activation_hidden](x)\n",
         "        return x\n",
         "\n",
         "    def calc_loss(self, output, target):\n",
@@ -229,38 +231,38 @@
         "    def __init__(self):\n",
         "        self.best_step = 1000\n",
         "        self.activations = {\n",
-        "            'sigmoid': nn.Sigmoid(),\n",
         "            'relu': nn.ReLU(),\n",
-        "            'rrelu0103': nn.RReLU(0.1, 0.3),\n",
-        "            'elu': nn.ELU(),\n",
-        "            'selu': nn.SELU(),\n",
-        "            'leakyrelu01': nn.LeakyReLU(0.1)\n",
+        "            'hardshrink': nn.Hardshrink(1),\n",
+        "            'relu6': nn.ReLU6(),\n",
+        "            'leakyrelu01': nn.LeakyReLU(0.1),\n",
+        "            'leakyrelu001': nn.LeakyReLU(0.01)\n",
         "        }\n",
-        "        self.learning_rate = 0.8\n",
-        "        self.momentum = 0.9\n",
-        "        self.hidden_size = 45\n",
-        "        self.layers_number = 5\n",
-        "        self.activation_hidden = 'relu'\n",
+        "        self.learning_rate = 0.001\n",
+        "#         self.momentum = 0.9\n",
+        "        self.hidden_size = 40\n",
+        "        self.layers_number = 10\n",
+        "        self.activation_hidden = 'leakyrelu01'\n",
         "        self.activation_output = 'sigmoid'\n",
         "        self.do_batch_norm = True\n",
         "        self.sols = {}\n",
         "        self.solsSum = {}\n",
         "        self.random = 0\n",
         "        self.random_grid = [_ for _ in range(10)]\n",
-        "        self.layers_number_grid = [5, 6, 7, 8]\n",
-        "        self.hidden_size_grid = [20, 25, 28, 30, 32, 35, 38, 40, 45]\n",
+        "        self.layers_number_grid = [5, 10, 15, 20]\n",
+        "#         self.hidden_size_grid = [20, 25, 28, 30, 32, 35, 38, 40, 45]\n",
+        "        self.hidden_size_grid = [5, 10, 15, 20, 30, 40, 50]\n",
         "#         self.momentum_grid = [0.0, 0.3, 0.5, 0.8, 0.9]\n",
-        "        self.learning_rate_grid = [0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.5]\n",
+        "#         self.learning_rate_grid = [0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.5]\n",
+        "        self.learning_rate_grid = [0.0005, 0.001, 0.005, 0.01, 0.05, 0.1]\n",
         "        self.activation_hidden_grid = list(self.activations.keys())\n",
-        "#         self.activation_output_grid = list(self.activations.keys())\n",
         "        self.grid_search = GridSearch(self)\n",
-        "        self.grid_search.set_enabled(False)\n",
+        "        self.grid_search.set_enabled(True)\n",
         "\n",
         "    def create_model(self, input_size, output_size):\n",
         "        return SolutionModel(input_size, output_size, self)\n",
         "\n",
         "    def get_key(self):\n",
-        "        return \"{}_{}_{}_{}_{}_{}_{}\".format(self.learning_rate, self.momentum, self.hidden_size, self.activation_hidden, self.activation_output, self.do_batch_norm, \"{0:03d}\".format(self.layers_number));\n",
+        "        return \"{}_{}_{}_{}_{}_{}\".format(self.learning_rate, self.hidden_size, self.activation_hidden, self.activation_output, self.do_batch_norm, \"{0:03d}\".format(self.layers_number));\n",
         "\n",
         "    # Return number of steps used\n",
         "    def train_model(self, model, train_data, train_target, context):\n",
@@ -271,7 +273,8 @@
         "        model.to(device)\n",
         "        # Put model in train mode\n",
         "        model.train()\n",
-        "        optimizer = optim.SGD(model.parameters(), lr=self.learning_rate, momentum=self.momentum)\n",
+        "#         optimizer = optim.SGD(model.parameters(), lr=self.learning_rate, momentum=self.momentum)\n",
+        "        optimizer = optim.Adam(model.parameters(), lr=self.learning_rate)\n",
         "        while True:\n",
         "            time_left = context.get_timer().get_time_left()\n",
         "            # No more time left, stop training\n",
@@ -289,17 +292,17 @@
         "            correct = predict.eq(target.view_as(predict)).long().sum().item()\n",
         "            # Total number of needed predictions\n",
         "            total = predict.view(-1).size(0)\n",
-        "#             if correct == total or (self.grid_search.enabled and step > 1000):\n",
-        "#                 if not key in self.sols:\n",
-        "#                     loss = model.calc_loss(output, target)\n",
-        "#                     self.sols[key] = 0\n",
-        "#                     self.solsSum[key] = 0\n",
-        "#                     self.sols[key] += 1\n",
-        "#                     self.solsSum[key] += step\n",
-        "#                 if correct == total:\n",
-        "#                     self.print_stats(step, loss, correct, total, model)\n",
-        "#                     print('{:.4f}'.format(float(self.solsSum[key])/self.sols[key]))\n",
-        "#                 break\n",
+        "            if correct == total : #or (self.grid_search.enabled and step > 1000):\n",
+        "                if not key in self.sols:\n",
+        "                    loss = model.calc_loss(output, target)\n",
+        "                    self.sols[key] = 0\n",
+        "                    self.solsSum[key] = 0\n",
+        "                    self.sols[key] += 1\n",
+        "                    self.solsSum[key] += step\n",
+        "                if correct == total:\n",
+        "                    self.print_stats(step, loss, correct, total, model)\n",
+        "                    print('{:.4f}'.format(float(self.solsSum[key])/self.sols[key]))\n",
+        "                break\n",
         "            # calculate loss\n",
         "            loss = model.calc_loss(output, target)\n",
         "            # calculate deriviative of model.forward() and put it in model.parameters()...gradient\n",
@@ -311,8 +314,8 @@
         "        return step\n",
         "    \n",
         "    def print_stats(self, step, loss, correct, total, model):\n",
-        "        print(\"LR={}, Momentum={}, HS={}, Number of layers={}, ActivOut={}, Step = {} Prediction = {}/{} Error = {}\".format(model.solution.learning_rate, model.solution.momentum,\n",
-        "                                                                                                              model.hidden_size, model.layers_number, model.activation_hidden, step, correct, total, loss.item()))\n"
+        "        print(\"LR={}, HS={}, Number of layers={}, ActivOut={}, Step = {} Prediction = {}/{} Error = {}\".format(\n",
+        "            model.learning_rate, model.hidden_size, model.layers_number, model.activation_hidden, step, correct, total, loss.item()))\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -411,7 +414,7 @@
       "cell_type": "code",
       "source": [
         "# If you want to run specific case, put number here\n",
-        "sm.SolutionManager(Config()).run(case_number=-1)"
+        "sm.SolutionManager(Config()).run(case_number=2)"
       ],
       "execution_count": 0,
       "outputs": []
