feat: Add uniform distribution of initial param values

--- a/mlis/problems/vote_prediction.ipynb
+++ b/mlis/problems/vote_prediction.ipynb
@@ -234,26 +234,24 @@
         "            'relu': nn.ReLU(),\n",
         "            'hardshrink': nn.Hardshrink(1),\n",
         "            'relu6': nn.ReLU6(),\n",
-        "            'leakyrelu01': nn.LeakyReLU(0.1),\n",
         "            'leakyrelu001': nn.LeakyReLU(0.01)\n",
         "        }\n",
-        "        self.learning_rate = 0.001\n",
-        "#         self.momentum = 0.9\n",
-        "        self.hidden_size = 40\n",
-        "        self.layers_number = 10\n",
-        "        self.activation_hidden = 'leakyrelu01'\n",
+        "        self.learning_rate = 5\n",
+        "        self.hidden_size = 16\n",
+        "        self.layers_number = 5\n",
+        "        self.activation_hidden = 'relu6'\n",
         "        self.activation_output = 'sigmoid'\n",
         "        self.do_batch_norm = True\n",
         "        self.sols = {}\n",
         "        self.solsSum = {}\n",
         "        self.random = 0\n",
         "        self.random_grid = [_ for _ in range(10)]\n",
-        "        self.layers_number_grid = [5, 10, 15, 20]\n",
+        "        self.layers_number_grid = [3, 4, 5, 6, 7, 8, 9]\n",
         "#         self.hidden_size_grid = [20, 25, 28, 30, 32, 35, 38, 40, 45]\n",
-        "        self.hidden_size_grid = [5, 10, 15, 20, 30, 40, 50]\n",
-        "#         self.momentum_grid = [0.0, 0.3, 0.5, 0.8, 0.9]\n",
-        "#         self.learning_rate_grid = [0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.5]\n",
-        "        self.learning_rate_grid = [0.0005, 0.001, 0.005, 0.01, 0.05, 0.1]\n",
+        "        self.hidden_size_grid = [15, 20, 25, 30, 35, 40]\n",
+        "#         self.hidden_size_grid = [8, 16, 24]\n",
+        "        self.learning_rate_grid = [0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.5]\n",
+        "#         self.learning_rate_grid = [0.001, 0.01, 0.1, 0.3, 0.5, 0.7, 0.9]\n",
         "        self.activation_hidden_grid = list(self.activations.keys())\n",
         "        self.grid_search = GridSearch(self)\n",
         "        self.grid_search.set_enabled(True)\n",
@@ -273,18 +271,15 @@
         "        model.to(device)\n",
         "        # Put model in train mode\n",
         "        model.train()\n",
-        "#         optimizer = optim.SGD(model.parameters(), lr=self.learning_rate, momentum=self.momentum)\n",
+        "        for param in model.parameters():\n",
+        "            nn.init.uniform_(param, -1.0, +1.0)\n",
         "        optimizer = optim.Adam(model.parameters(), lr=self.learning_rate)\n",
+        "        loss = 0.0\n",
         "        while True:\n",
         "            time_left = context.get_timer().get_time_left()\n",
-        "            # No more time left, stop training\n",
-        "            if time_left < 0.1:\n",
-        "                break\n",
         "            data = train_data\n",
-        "            target = train_target\n",
-        "            # model.parameters()...gradient set to zero\n",
-        "            optimizer.zero_grad()\n",
-        "            # evaluate model => model.forward(data)\n",
+        "            target = train_target            \n",
+        "            optimizer.zero_grad()        \n",
         "            output = model(data)\n",
         "            # if x < 0.5 predict 0 else predict 1\n",
         "            predict = model.calc_predict(output)\n",
@@ -292,23 +287,23 @@
         "            correct = predict.eq(target.view_as(predict)).long().sum().item()\n",
         "            # Total number of needed predictions\n",
         "            total = predict.view(-1).size(0)\n",
-        "            if correct == total : #or (self.grid_search.enabled and step > 1000):\n",
+        "            if correct == total or time_left < 0.1:#(self.grid_search.enabled and step > 100):\n",
         "                if not key in self.sols:\n",
         "                    loss = model.calc_loss(output, target)\n",
         "                    self.sols[key] = 0\n",
         "                    self.solsSum[key] = 0\n",
         "                    self.sols[key] += 1\n",
         "                    self.solsSum[key] += step\n",
-        "                if correct == total:\n",
-        "                    self.print_stats(step, loss, correct, total, model)\n",
-        "                    print('{:.4f}'.format(float(self.solsSum[key])/self.sols[key]))\n",
+        "#                 if correct == total:\n",
+        "                self.print_stats(step, loss, correct, total, model)\n",
+        "                print('{:.4f}'.format(float(self.solsSum[key])/self.sols[key]))\n",
         "                break\n",
-        "            # calculate loss\n",
+        "#             calculate loss\n",
         "            loss = model.calc_loss(output, target)\n",
-        "            # calculate deriviative of model.forward() and put it in model.parameters()...gradient\n",
+        "#             calculate deriviative of model.forward() and put it in model.parameters()...gradient\n",
         "            loss.backward()\n",
-        "            # print progress of the learning\n",
-        "            # update model: model.parameters() -= lr * gradient\n",
+        "#             print progress of the learning\n",
+        "#             update model: model.parameters() -= lr * gradient\n",
         "            optimizer.step()\n",
         "            step += 1\n",
         "        return step\n",
@@ -414,7 +409,7 @@
       "cell_type": "code",
       "source": [
         "# If you want to run specific case, put number here\n",
-        "sm.SolutionManager(Config()).run(case_number=2)"
+        "sm.SolutionManager(Config()).run(case_number=4)"
       ],
       "execution_count": 0,
       "outputs": []
