feat: Remove non-unique entries from input

--- a/mlis/problems/vote_prediction.ipynb
+++ b/mlis/problems/vote_prediction.ipynb
@@ -174,7 +174,6 @@
         "        self.output_size = output_size\n",
         "        self.solution = solution\n",
         "        self.learning_rate = solution.learning_rate\n",
-        "#         self.momentum = solution.momentum\n",
         "        self.hidden_size = solution.hidden_size\n",
         "        self.activation_hidden = solution.activation_hidden\n",
         "        self.activation_output = nn.Sigmoid()\n",
@@ -227,6 +226,8 @@
       },
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "\n",
         "class Solution():\n",
         "    def __init__(self):\n",
         "        self.best_step = 1000\n",
@@ -236,9 +237,9 @@
         "            'relu6': nn.ReLU6(),\n",
         "            'leakyrelu001': nn.LeakyReLU(0.01)\n",
         "        }\n",
-        "        self.learning_rate = 5\n",
-        "        self.hidden_size = 16\n",
-        "        self.layers_number = 5\n",
+        "        self.learning_rate = 1\n",
+        "        self.hidden_size = 120\n",
+        "        self.layers_number = 3\n",
         "        self.activation_hidden = 'relu6'\n",
         "        self.activation_output = 'sigmoid'\n",
         "        self.do_batch_norm = True\n",
@@ -246,15 +247,15 @@
         "        self.solsSum = {}\n",
         "        self.random = 0\n",
         "        self.random_grid = [_ for _ in range(10)]\n",
-        "        self.layers_number_grid = [3, 4, 5, 6, 7, 8, 9]\n",
+        "#         self.layers_number_grid = [3, 4, 5, 6, 7]\n",
         "#         self.hidden_size_grid = [20, 25, 28, 30, 32, 35, 38, 40, 45]\n",
-        "        self.hidden_size_grid = [15, 20, 25, 30, 35, 40]\n",
-        "#         self.hidden_size_grid = [8, 16, 24]\n",
-        "        self.learning_rate_grid = [0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.5]\n",
-        "#         self.learning_rate_grid = [0.001, 0.01, 0.1, 0.3, 0.5, 0.7, 0.9]\n",
+        "        self.hidden_size_grid = [48, 64, 80, 96, 120]\n",
+        "#         self.hidden_size_grid = [8, 12, 16, 20, 24]\n",
+        "#         self.learning_rate_grid = [0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.5]\n",
+        "        self.learning_rate_grid = [0.001, 0.01, 0.1, 0.5, 1, 1.5, 2, 3, 5, 10]\n",
         "        self.activation_hidden_grid = list(self.activations.keys())\n",
         "        self.grid_search = GridSearch(self)\n",
-        "        self.grid_search.set_enabled(True)\n",
+        "        self.grid_search.set_enabled(False)\n",
         "\n",
         "    def create_model(self, input_size, output_size):\n",
         "        return SolutionModel(input_size, output_size, self)\n",
@@ -275,10 +276,23 @@
         "            nn.init.uniform_(param, -1.0, +1.0)\n",
         "        optimizer = optim.Adam(model.parameters(), lr=self.learning_rate)\n",
         "        loss = 0.0\n",
+        "        \n",
+        "        print(len(train_data))\n",
+        "        \n",
+        "        data, unique_idxs = np.unique(train_data.cpu(), axis=0, return_index=True)\n",
+        "        data = torch.from_numpy(data).to(device)\n",
+        "        print(len(data))\n",
+        "        target = train_target[unique_idxs]\n",
+        "#         print(\"DATA\")\n",
+        "#         print(data)\n",
+        "#         print(len(data))\n",
+        "#         print(len(set(data)))\n",
+        "#             print(data[0])\n",
+        "#             print(\"TARGET\")\n",
+        "#             print(target)\n",
+        "        \n",
         "        while True:\n",
         "            time_left = context.get_timer().get_time_left()\n",
-        "            data = train_data\n",
-        "            target = train_target            \n",
         "            optimizer.zero_grad()        \n",
         "            output = model(data)\n",
         "            # if x < 0.5 predict 0 else predict 1\n",
@@ -294,9 +308,9 @@
         "                    self.solsSum[key] = 0\n",
         "                    self.sols[key] += 1\n",
         "                    self.solsSum[key] += step\n",
-        "#                 if correct == total:\n",
-        "                self.print_stats(step, loss, correct, total, model)\n",
-        "                print('{:.4f}'.format(float(self.solsSum[key])/self.sols[key]))\n",
+        "                if correct == total:\n",
+        "                    self.print_stats(step, loss, correct, total, model)\n",
+        "                    print('{:.4f}'.format(float(self.solsSum[key])/self.sols[key]))\n",
         "                break\n",
         "#             calculate loss\n",
         "            loss = model.calc_loss(output, target)\n",
@@ -424,7 +438,6 @@
         "Best hyper parameters:\n",
         "\n",
         "        self.learning_rate = 0.8\n",
-        "        self.momentum = 0.9\n",
         "        self.hidden_size = 45\n",
         "        self.layers_number = 5\n",
         "        self.activation_hidden = 'relu'\n",
