--- a/mlis/problems/vote_prediction.ipynb
+++ b/mlis/problems/vote_prediction.ipynb
@@ -6,7 +6,9 @@
       "name": "vote_prediction.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "RKLqM7yTJMQE"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -115,12 +117,14 @@
         "import time\n",
         "import random\n",
         "import torch\n",
+        "from torch.autograd import Variable\n",
         "import torchvision\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "import torch.optim as optim\n",
         "import solutionmanager as sm\n",
-        "from gridsearch import GridSearch"
+        "from gridsearch import GridSearch\n",
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -156,7 +160,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Create neural network"
+        "### Create neural network"
       ]
     },
     {
@@ -170,31 +174,33 @@
         "class SolutionModel(nn.Module):\n",
         "    def __init__(self, input_size, output_size, solution):\n",
         "        super(SolutionModel, self).__init__()\n",
-        "        self.input_size = input_size\n",
+        "        self.total_input_size = input_size\n",
+        "        self.input_size = 8\n",
         "        self.output_size = output_size\n",
         "        self.solution = solution\n",
         "        self.learning_rate = solution.learning_rate\n",
         "        self.hidden_size = solution.hidden_size\n",
         "        self.activation_hidden = solution.activation_hidden\n",
         "        self.activation_output = nn.Sigmoid()\n",
-        "        self.do_batch_norm = solution.do_batch_norm\n",
         "        self.layers_number = solution.layers_number\n",
-        "        if self.solution.grid_search.enabled:\n",
-        "            torch.manual_seed(solution.random)\n",
         "        self.hidden_size = self.solution.hidden_size\n",
         "        self.linears = nn.ModuleList([nn.Linear(self.input_size if i == 0 else self.hidden_size, self.hidden_size if i != self.solution.layers_number -1 else self.output_size) for i in range(self.solution.layers_number)]).to(device)\n",
         "        self.batch_norms = nn.ModuleList([nn.BatchNorm1d(self.hidden_size if i != self.solution.layers_number-1 else self.output_size, track_running_stats=False) for i in range(self.solution.layers_number)]).to(device)\n",
         "\n",
-        "    def forward(self, x):\n",
-        "        for i in range(len(self.linears)):\n",
-        "            x = self.linears[i](x)\n",
-        "            if self.solution.do_batch_norm:\n",
+        "    def forward(self, x_batch):\n",
+        "        num_voters = self.total_input_size // 8\n",
+        "        parts = torch.split(x_batch, 8, dim=1)\n",
+        "        result = torch.zeros(x_batch.shape[0], 1).to(device)\n",
+        "        for x in parts:\n",
+        "            for i in range(len(self.linears)):\n",
+        "                x = self.linears[i](x)\n",
         "                x = self.batch_norms[i](x)\n",
-        "            if i == len(self.linears)-1:\n",
-        "                x = self.activation_output(x)\n",
-        "            else:            \n",
-        "                x = self.solution.activations[self.activation_hidden](x)\n",
-        "        return x\n",
+        "                if i == len(self.linears)-1:\n",
+        "                    x = self.activation_output(x)\n",
+        "                else:            \n",
+        "                    x = self.solution.activations[self.activation_hidden](x)\n",
+        "            result.add(x)\n",
+        "        return Variable(torch.div(result, num_voters), requires_grad=True)\n",
         "\n",
         "    def calc_loss(self, output, target):\n",
         "        bce_loss = nn.BCELoss()\n",
@@ -215,7 +221,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Create class to store hyper parameters. Implement grid search"
+        "### Create class to store hyper parameters. Implement grid search"
       ]
     },
     {
@@ -237,16 +243,14 @@
         "            'relu6': nn.ReLU6(),\n",
         "            'leakyrelu001': nn.LeakyReLU(0.01)\n",
         "        }\n",
-        "        self.learning_rate = 1\n",
-        "        self.hidden_size = 120\n",
+        "        self.learning_rate = 0.1\n",
+        "        self.hidden_size = 80\n",
         "        self.layers_number = 3\n",
-        "        self.activation_hidden = 'relu6'\n",
+        "        self.activation_hidden = 'leakyrelu001'\n",
         "        self.activation_output = 'sigmoid'\n",
         "        self.do_batch_norm = True\n",
         "        self.sols = {}\n",
         "        self.solsSum = {}\n",
-        "        self.random = 0\n",
-        "        self.random_grid = [_ for _ in range(10)]\n",
         "#         self.layers_number_grid = [3, 4, 5, 6, 7]\n",
         "#         self.hidden_size_grid = [20, 25, 28, 30, 32, 35, 38, 40, 45]\n",
         "        self.hidden_size_grid = [48, 64, 80, 96, 120]\n",
@@ -255,7 +259,7 @@
         "        self.learning_rate_grid = [0.001, 0.01, 0.1, 0.5, 1, 1.5, 2, 3, 5, 10]\n",
         "        self.activation_hidden_grid = list(self.activations.keys())\n",
         "        self.grid_search = GridSearch(self)\n",
-        "        self.grid_search.set_enabled(False)\n",
+        "        self.grid_search.set_enabled(True)\n",
         "\n",
         "    def create_model(self, input_size, output_size):\n",
         "        return SolutionModel(input_size, output_size, self)\n",
@@ -276,41 +280,26 @@
         "            nn.init.uniform_(param, -1.0, +1.0)\n",
         "        optimizer = optim.Adam(model.parameters(), lr=self.learning_rate)\n",
         "        loss = 0.0\n",
-        "        \n",
-        "        print(len(train_data))\n",
-        "        \n",
-        "        data, unique_idxs = np.unique(train_data.cpu(), axis=0, return_index=True)\n",
-        "        data = torch.from_numpy(data).to(device)\n",
-        "        print(len(data))\n",
-        "        target = train_target[unique_idxs]\n",
-        "#         print(\"DATA\")\n",
-        "#         print(data)\n",
-        "#         print(len(data))\n",
-        "#         print(len(set(data)))\n",
-        "#             print(data[0])\n",
-        "#             print(\"TARGET\")\n",
-        "#             print(target)\n",
-        "        \n",
+        "        data = train_data\n",
+        "        target=train_target\n",
         "        while True:\n",
         "            time_left = context.get_timer().get_time_left()\n",
         "            optimizer.zero_grad()        \n",
         "            output = model(data)\n",
         "            # if x < 0.5 predict 0 else predict 1\n",
         "            predict = model.calc_predict(output)\n",
-        "            # Number of correct predictions\n",
         "            correct = predict.eq(target.view_as(predict)).long().sum().item()\n",
         "            # Total number of needed predictions\n",
         "            total = predict.view(-1).size(0)\n",
-        "            if correct == total or time_left < 0.1:#(self.grid_search.enabled and step > 100):\n",
+        "            if correct == total or (self.grid_search.enabled and time_left < 0.1):\n",
         "                if not key in self.sols:\n",
         "                    loss = model.calc_loss(output, target)\n",
         "                    self.sols[key] = 0\n",
         "                    self.solsSum[key] = 0\n",
         "                    self.sols[key] += 1\n",
         "                    self.solsSum[key] += step\n",
-        "                if correct == total:\n",
-        "                    self.print_stats(step, loss, correct, total, model)\n",
-        "                    print('{:.4f}'.format(float(self.solsSum[key])/self.sols[key]))\n",
+        "#                 if correct == total:\n",
+        "                self.print_stats(step, loss, correct, total, model)\n",
         "                break\n",
         "#             calculate loss\n",
         "            loss = model.calc_loss(output, target)\n",
@@ -336,7 +325,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Create data generator"
+        "### Create data generator"
       ]
     },
     {
@@ -411,7 +400,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Run training loop"
+        "### Run training loop"
       ]
     },
     {
@@ -423,7 +412,7 @@
       "cell_type": "code",
       "source": [
         "# If you want to run specific case, put number here\n",
-        "sm.SolutionManager(Config()).run(case_number=4)"
+        "sm.SolutionManager(Config()).run(case_number=3)"
       ],
       "execution_count": 0,
       "outputs": []
